<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white_aquamarine">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="287dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userMenu"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="☰"
            android:textAlignment="textEnd"
            android:textColor="@color/yellow"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMenuUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_usuario"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/nombre_completo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtUserCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Empresa o emprendimiento"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTxtUserCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="onBtnSaveClick"
        android:text="@string/guardar"
        android:textColor="@color/white" />

</LinearLayout>

